[package]
name = "r2d2_postgres"
version = "0.12.0"
authors = ["Steven Fackler <sfackler@gmail.com>"]
license = "MIT"
description = "Postgres support for the r2d2 connection pool"
repository = "https://github.com/sfackler/r2d2-postgres"
documentation = "https://docs.rs/r2d2_postgres/0.12.0/r2d2_postgres"
keywords = ["postgres", "sql", "pool", "database"]

[lib]
name = "r2d2_postgres"
path = "src/lib.rs"
test = false

[[test]]
name = "test"
path = "tests/test.rs"

[dependencies]
r2d2 = "0.7"

[dependencies.postgres]
git = "https://github.com/sfackler/rust-postgres"
rev = "6a86f8dd853120e9a0a3b1c59338e3141030334d"
